--- a/markup/about.html
+++ b/markup/about.html
@@ -328,6 +328,9 @@
 				</div>
 			</footer>
 		</div>
+		<p>Некий текст</p>
+
+		p>Некий текст</p>
 
 	</div>
 	<script src="js/jquery-1.11.2.min.js"></script>
